rabbitmq/manifests/05-rabbitmq-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-nodeport
  namespace: rabbitmq
  labels:
    app.kubernetes.io/name: rabbitmq
spec:
  selector:
    app.kubernetes.io/name: rabbitmq
  ports:
    - protocol: TCP
      port: 5672        # Porta interna para AMQP (RabbitMQ)
      targetPort: 5672   # Porta do container RabbitMQ
      name: amqp
  type: NodePort  # Tipo NodePort que expõe automaticamente a porta
