rabbitmq/manifests/06-rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  namespace: rabbitmq
  annotations:
spec:
  ingressClassName: "nginx"
  rules:
    - host: rabbitmq-hml.jetsales.com.br
      http:
        paths:
          - path: /metrics/
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15692
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
